# poc-event-driven-archtechture

./: README.md  mypy.ini  pyproject.toml
poc_event_app/: inject_with_dependency_injector.py  inject_with_kink.py
